<resources>
    <string name="app_name">Message Share App</string>

    <string name="btn_show_toast">Show Toast</string>
    <string name="btn_send_data_to_activity">Send Data To Next Activity</string>
    <string name="btn_share_to_apps">Share to other apps</string>
    <string name="btn_recycler_view">Recycler View Demo</string>

    <string name="et_enter_msg">Enter your message</string>

    <string name="btn_clicked">Button clicked!</string>
    <string name="share_to">Share to:</string>
    <string name="my_hobby_is">My hobby is &#160;</string>
    <string name="clicked">&#160; clicked!</string>

    <string name="swimming">Swimming</string>
    <string name="reading">Reading</string>
    <string name="walking">Walking</string>
    <string name="sleeping">Sleeping</string>
    <string name="gaming">Gaming</string>
    <string name="programming">Programming</string>
    <string name="talking">Talking</string>
    <string name="acting">Acting</string>
    <string name="baking">Baking</string>
    <string name="coloring">Coloring</string>
    <string name="cycling">Cycling</string>
    <string name="dancing">Dancing</string>
    <string name="drawing">Drawing</string>
    <string name="flying_kite">Flying Kite</string>
    <string name="gardening">Gardening</string>
    <string name="painting">Painting</string>
    <string name="running">Running</string>
    <string name="singing">Singing</string>
</resources>
