<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <Button
        android:id="@+id/btn_showToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/btn_show_toast" />

    <EditText
        android:id="@+id/et_userMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_showToast"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/et_enter_msg"
        android:maxLines="3" />

    <Button
        android:id="@+id/btn_sendUserMessageToNextActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_userMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/btn_send_data_to_activity" />

    <Button
        android:id="@+id/btn_shareToOtherApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sendUserMessageToNextActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/btn_share_to_apps" />

    <Button
        android:id="@+id/btn_recyclerViewDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_shareToOtherApps"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_recycler_view" />
</RelativeLayout>